--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
     </nav>
     <main>
         <div class="welcomeMsg">
-            <marquee><h3>Barka da Zuwa Darasin Internet </h3></marquee>
+            <marquee><h3>Welcome to internet Tutorial! </h3></marquee>
         </div>
          <!--Internet Introduction-->
         <section id="intro">
